tests/src/frontend/typechecking/invalid/from_invalid_1.sk
base class Foo {
  fun foo(): void {
    void
  }
}
class MyFoo() {
  fun foo from Foo;
}
